--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,20 @@
 <head>
   <meta charset="utf-8">
   <title>AngularElectron</title>
-  <base href="/">
+  <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+
+  <script>
+    const dialog = require('electron').remote.dialog;
+    // dialog.showOpenDialog({title:'select'}, (filenames) => {
+    //   console.log(filenames);
+    // });
+  </script>
+
 </body>
 </html>
