--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
 
   <script>
     const dialog = require('electron').remote.dialog;
+    const fs = require('fs');
+    const parseString = require('xml2js').parseString;
     // dialog.showOpenDialog({title:'select'}, (filenames) => {
     //   console.log(filenames);
     // });
