--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,10 @@
   <script>
     const dialog = require('electron').remote.dialog;
     const fs = require('fs');
-    const parseString = require('xml2js').parseString;
+    const xml2js = require('xml2js');
+    const path = require('path');
+    const xml = require('xml');
+    const csvParse = require('csv-parse');
   </script>
 
 </body>
